# kale-site

./: .env.example  .gitignore  Cargo.toml  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
bun_tests/: bun.lockb  index.ts
contracts/: Cargo.toml  Makefile
contracts/kale-chat/: Cargo.toml
contracts/kale-chat/src/: lib.rs  test.rs
contracts/kale-chat/test_snapshots/test/: test.1.json
kale-chat-sdk/: README.md  package.json
kale-chat-sdk/src/: index.ts
kale-sc-sdk/: .gitignore  package.json  pnpm-lock.yaml
kale-sc-sdk/src/: index.ts
pkg/: kale_wasm_miner.d.ts  kale_wasm_miner_bg.wasm  kale_wasm_miner_bg.wasm.d.ts  package.json
public/: worker.js
public/pkg/: kale_wasm_miner.d.ts  kale_wasm_miner.js  kale_wasm_miner_bg.wasm  kale_wasm_miner_bg.wasm.d.ts
src/: env.d.ts
src/components/: About.svelte  AddSigner.svelte  Chat.svelte  Header.svelte  Home.svelte  Leaderboard.svelte
src/layouts/: Layout.astro
src/pages/: chat.astro  index.astro  leaderboard.astro
src/pages/about/: index.astro  index.md
src/pages/chat/: index.astro
src/pages/leaderboard/: index.astro
src/store/: contractBalance.ts  keyId.ts
src/utils/: base.ts  kale.ts  passkey-kit.ts  wasm-miner.ts
wasm-miner/: Cargo.toml  Makefile  rust-toolchain.toml
wasm-miner/.cargo/: config.toml
wasm-miner/pkg/: kale_wasm_miner.d.ts  kale_wasm_miner.js  kale_wasm_miner_bg.wasm  kale_wasm_miner_bg.wasm.d.ts  package.json
wasm-miner/pkg/snippets/wasm-bindgen-rayon-9d40dbf53d170728/src/: workerHelpers.worker.js
wasm-miner/src/: _lib.rs  lib.rs  pool.rs
zephyr/: Cargo.toml  cheatsheet  zephyr.toml
zephyr/src/: lib.rs
