[package]
name = "kale-wasm-miner"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.95"
hex = "0.4.3"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
console_error_panic_hook = "0.1.7"
futures-channel-preview = "0.3.0-alpha.18"
js-sys = "0.3.72"
rayon = "1.10.0"
rayon-core = "1.12.1"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = [
  'ErrorEvent',
  'Event',
  'Navigator',
  'Window',
  'Worker',
  'DedicatedWorkerGlobalScope',
  'MessageEvent'
] }
wasm-bindgen-cli = "0.2.95"