[package]
name = "kale-wasm-miner"
version = "0.0.0"
authors = ["Tyler van der Hoeven <tyler@stellar.org>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.93"
wasm-bindgen-rayon = "1.2.2"
rayon = { version = "1.10.0", features = ["web_spin_lock"] }
sha3 = "0.10.8"
web-time = "1.1.0"

[dependencies.web-sys]
version = "0.3.70"