[package]
name = "kale-addresses"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
zephyr-sdk = { version = "0.1.7" }
serde = { version = "1.0", features = ["derive"] }
# serde_json = "1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true



